@@ -55,8 +55,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,31,6,1
- PRODUCTVERSION 0,31,6,1
+ FILEVERSION 0,31,7,1
+ PRODUCTVERSION 0,31,7,1
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -74,12 +74,12 @@ BEGIN
             VALUE "Comments", "Unmanaged loader shim for Excel-DNA Add-Ins"
             VALUE "CompanyName", "Govert van Drimmelen"
             VALUE "FileDescription", "Excel-DNA Dynamic Link Library"
-            VALUE "FileVersion", "0.31.6.1"
+            VALUE "FileVersion", "0.31.7.1"
             VALUE "InternalName", "ExcelDna"
             VALUE "LegalCopyright", "Copyright (C) 2005-2013 Govert van Drimmelen"
             VALUE "OriginalFilename", "ExcelDna.xll"
             VALUE "ProductName", "Excel-DNA Add-In Framework for Microsoft Excel"
-            VALUE "ProductVersion", "0.31.6.1"
+            VALUE "ProductVersion", "0.31.7.1"
         END
     END
     BLOCK "VarFileInfo"
