@@ -10,6 +10,8 @@ Version 0.31 (???)
 * Restructured ExcelDnaUtil.WindowHandle and ExcelDnaUtil.Application to work better under Excel 2013.
 * Fixed ExcelDnaUtil.IsInFunctionWizard() under Excel 2013.
 * Add support for Excel 2010+ native queued async functions.
+* Raise maximum number of functions exported to 5000.
+
 
 Version 0.30 (12 December 2012)
 -------------------------------
